--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -45,7 +45,7 @@
         <List id="all-list" items="{sample>/}">
           <headerToolbar>
             <OverflowToolbar id="all-list-bar">
-              <Title id="all-bar-info" text="{i18n>SAP BTP Services}" level="H4" />
+              <Title id="all-bar-info" text="{i18n>SAP_BTP_Services}" level="H4" />
               <ToolbarSpacer id="all-bar-spacer" />
               <SearchField id="all-bar-search" width="60%" placeholder="{i18n>Search for the name or description}"
                 liveChange=".liveSearch" />
