--- a/docs/view/MainView.view.xml
+++ b/docs/view/MainView.view.xml
@@ -35,7 +35,7 @@
     <tnt:mainContents>
       <ScrollContainer id="all-page" horizontal="false" vertical="true" height="100%">
 
-        <List id="all-list" items="{sample>/}">
+        <List id="all-list" items="{sample>/}" growing="true" growingScrollToLoad="true" growingThreshold="15">
           <headerToolbar>
             <OverflowToolbar id="all-list-bar">
               <Title id="all-bar-info" text="{i18n>mainView_listTitle}" level="H4" />
