--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -1,12 +1,15 @@
-<mvc:View controllerName="com.devtoberfest.devtoberfest2021FrontendCodingChallenge.controller.MainView"
-  displayBlock="true" xmlns="sap.m" xmlns:f="sap.f" xmlns:tnt="sap.tnt" xmlns:core="sap.ui.core"
+<mvc:View controllerName="com.devtoberfest.devtoberfest2021FrontendCodingChallenge.controller.MainView" displayBlock="true"
+  xmlns="sap.m"
+  xmlns:f="sap.f"
+  xmlns:tnt="sap.tnt"
+  xmlns:core="sap.ui.core"
   xmlns:mvc="sap.ui.core.mvc">
   <!-- xmlns:aow="aow.artifact.control" -->
   <tnt:ToolPage id="toolPage">
     <tnt:header>
-      
+
       <tnt:ToolHeader>
-        <Image src="resources/img/favicon.ico">
+        <Image src="resources/img/favicon.ico" lazyLoading="true" height="48px" width="48px">
           <layoutData>
             <OverflowToolbarLayoutData priority="Disappear" />
           </layoutData>
@@ -17,42 +20,30 @@
           </layoutData>
         </Text>
         <ToolbarSpacer />
-        <Image src="resources/img/github.png" height="50%" press="goToRepo" />
-        <Link text="{i18n>forkMe}" target="_blank"
-          href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge"
-          visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" class="sapUiMediumMarginEnd" />
-        <core:Icon id="barDarkIcon" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }"
-          src="sap-icon://energy-saving-lightbulb" color="{= !${settings>/lightTheme} ? '#f9d001' : ''}"
-          tooltip="{i18n>dark}" />
-        <Switch id="barThemeSwitch" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }"
-          state="{settings>/lightTheme}" customTextOff="{i18n>dark}" customTextOn="{i18n>light}" change="onToggleTheme"
-          tooltip="{= ${settings>/lightTheme} ? ${i18n>dark} : ${i18n>light} }" />
-        <core:Icon id="barLightIcon" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }"
-          src="sap-icon://circle-task-2" color="{= ${settings>/lightTheme} ? '#f9d001' : ''}" tooltip="{i18n>light}"
-          class="sapUiMediumMarginEnd" />
+        <Image src="resources/img/github.webp" lazyLoading="true" height="22px" width="22px" press="goToRepo" />
+        <Link text="{i18n>forkMe}" target="_blank" href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" class="sapUiMediumMarginEnd" />
+        <core:Icon id="barDarkIcon" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" src="sap-icon://energy-saving-lightbulb" color="{= !${settings>/lightTheme} ? '#f9d001' : ''}" tooltip="{i18n>dark}" />
+        <Switch id="barThemeSwitch" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" state="{settings>/lightTheme}" customTextOff="{i18n>dark}" customTextOn="{i18n>light}" change="onToggleTheme" tooltip="{= ${settings>/lightTheme} ? ${i18n>dark} : ${i18n>light} }" />
+        <core:Icon id="barLightIcon" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" src="sap-icon://circle-task-2" color="{= ${settings>/lightTheme} ? '#f9d001' : ''}" tooltip="{i18n>light}" class="sapUiMediumMarginEnd" />
       </tnt:ToolHeader>
     </tnt:header>
     <tnt:mainContents>
       <ScrollContainer id="all-page" horizontal="false" vertical="true" height="100%">
 
-        <MessageStrip text="{i18n>performanceNote}" type="Warning" showIcon="true" showCloseButton="true"
-          class="sapUiSmallMarginTopBottom">
+        <MessageStrip text="{i18n>performanceNote}" type="Warning" showIcon="true" showCloseButton="true" class="sapUiSmallMarginTopBottom">
           <link>
-          <Link text="{i18n>performanceNoteLink}" target="_blank"
-            href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge" />
+            <Link text="{i18n>performanceNoteLink}" target="_blank" href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge" />
           </link>
         </MessageStrip>
-        <List id="all-list" items="{sample>/}">
+        <List id="all-list" items="{sample>/}" growingThreshold="10" growing="true" growingScrollToLoad="true">
           <headerToolbar>
             <OverflowToolbar id="all-list-bar">
-              <Title id="all-bar-info" text="{i18n>SAP BTP Services}" level="H4" />
+              <Title id="all-bar-info" text="{i18n>toolBarTitle}" level="H4" />
               <ToolbarSpacer id="all-bar-spacer" />
-              <SearchField id="all-bar-search" width="60%" placeholder="{i18n>Search for the name or description}"
-                liveChange=".liveSearch" />
+              <SearchField id="all-bar-search" width="60%" placeholder="{i18n>searchFieldPlaceHolderText}" liveChange=".liveSearch" />
             </OverflowToolbar>
           </headerToolbar>
-          <StandardListItem title="{sample>name}" description="{sample>description}" infoState="Information"
-            icon="{sample>icon}" info="{sample>category}" />
+          <StandardListItem title="{sample>name}" description="{sample>description}" infoState="Information" icon="{sample>icon}" info="{sample>category}" />
         </List>
       </ScrollContainer>
     </tnt:mainContents>
