--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -18,7 +18,7 @@
           </layoutData>
         </Text>
         <ToolbarSpacer />
-        <Image src="resources/img/github.png" lazyLoading="true" height="50%" press="goToRepo" />
+        <Image src="resources/img/github.webp" lazyLoading="true" height="24px" width="24px" press="goToRepo" />
         <Link text="{i18n>forkMe}" target="_blank" href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" class="sapUiMediumMarginEnd" />
         <core:Icon id="barDarkIcon" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" src="sap-icon://energy-saving-lightbulb" color="{= !${settings>/lightTheme} ? '#f9d001' : ''}" tooltip="{i18n>dark}" />
         <Switch id="barThemeSwitch" visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" state="{settings>/lightTheme}" customTextOff="{i18n>dark}" customTextOn="{i18n>light}" change="onToggleTheme" tooltip="{= ${settings>/lightTheme} ? ${i18n>dark} : ${i18n>light} }" />
