--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -35,13 +35,13 @@
     <tnt:mainContents>
       <ScrollContainer id="all-page" horizontal="false" vertical="true" height="100%">
 
-        <MessageStrip text="{i18n>performanceNote}" type="Warning" showIcon="true" showCloseButton="true"
+        <!--MessageStrip text="{i18n>performanceNote}" type="Warning" showIcon="true" showCloseButton="true"
           class="sapUiSmallMarginTopBottom">
           <link>
           <Link text="{i18n>performanceNoteLink}" target="_blank"
             href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge" />
           </link>
-        </MessageStrip>
+        </MessageStrip-->
         <List id="all-list" items="{sample>/}">
           <headerToolbar>
             <OverflowToolbar id="all-list-bar">
