feat: Improve performance

--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -35,12 +35,12 @@
     <tnt:mainContents>
       <ScrollContainer id="all-page" horizontal="false" vertical="true" height="100%">
 
-        <List id="all-list" items="{sample>/}" growing="true" growingScrollToLoad="true" growingThreshold="15">
+        <List id="all-list" items="{sample>/}">
           <headerToolbar>
             <OverflowToolbar id="all-list-bar">
-              <Title id="all-bar-info" text="{i18n>mainView_listTitle}" level="H4" />
+              <Title id="all-bar-info" text="{i18n>listTitle}" level="H4" />
               <ToolbarSpacer id="all-bar-spacer" />
-              <SearchField id="all-bar-search" width="60%" placeholder="{i18n>mainView_searchFieldPlaceholder}"
+              <SearchField id="all-bar-search" width="60%" placeholder="{i18n>searchPlaceholder}"
                 liveChange="liveSearch" />
             </OverflowToolbar>
           </headerToolbar>
