--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -8,7 +8,7 @@
       
       <Toolbar>
       
-        <Image src="resources/img/favicon.ico" height="48px" width="48px" >
+        <Image src="/resources/img/favicon.ico" height="48px" width="48px" >
           <layoutData>
             <OverflowToolbarLayoutData priority="Disappear" />
           </layoutData>
@@ -21,7 +21,7 @@
 
         <ToolbarSpacer />
         
-        <Image src="resources/img/github.png" height="22px" width="22px" press="goToRepo" />
+        <Image src="/resources/img/github.png" height="22px" width="22px" press="goToRepo" />
         <Link text="{i18n>forkMe}" target="_blank"
           href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge"
           visible="{= ${device>/orientation/landscape} || !${device>/browser/mobile} }" class="sapUiMediumMarginEnd" />
@@ -45,7 +45,7 @@
     </VBox>
 
 
-        <List id="all-list" items="{sample>/}" growing="true" growingThreshold="10">
+        <List id="all-list" items="{sample>/}" growing="true" growingThreshold="20">
           <headerToolbar>
             <OverflowToolbar id="all-list-bar">
               <Title id="all-bar-info" text="{i18n>SAP_BTP_Services}" level="H4" />
