--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -42,7 +42,7 @@
             href="https://github.com/SAP-samples/devtoberfest-2021-frontend-coding-challenge" />
           </link>
         </MessageStrip>
-        <List id="all-list" items="{sample>/}">
+        <List growing="true" id="all-list" items="{sample>/}">
           <headerToolbar>
             <OverflowToolbar id="all-list-bar">
               <Title id="all-bar-info" text="{i18n>SAP BTP Services}" level="H4" />
